--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-PyYAML
+torch>=1.6.0
 chamferdist==1.0.0
-kornia
 imageio
+kornia
 natsort
 numpy
-plotly
+plotly>=4.10
+pyyaml
 open3d==0.10.0.0
 opencv-python-headless
-torchvision
