--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -6,43 +6,22 @@ name: PythonTesting
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
 
 jobs:
-  build:
-
+  testing:
     runs-on: ubuntu-latest
-
+    
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python 3.9
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.9
-    - name: install black
-      run: |
-        pip install black
-    - name: automation format
-      run: black .
-    - name: git check modification
-      id: git-check
-      run: echo ::set-ouput name=modified::$(if git diff-index --quiet HEAD --; then echo "no"; else echo "yes"; fi)
-    - name: push changes
-      if: steps.git-check.outputs.modified == 'yes' && github.event_name == 'push'
-      run: |
-        git config --global user.name 'github-actions[bot]'
-        git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
-        git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
-        git pull
-        git commi -am "style: refactor code"
-        git push
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install flake8 pytest
-    - name: Lint with flake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --show-source --statistics
-  
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.8'
+          cache: 'pip'
+      - run: pip install black flake8
+      
+      - name: run black
+        run: black ./
+        shell: bash
+
+      - name: run flake8
+        run: flake8 .
